[comp-lex] Finish

--- a/comp-lexical/report.bib
+++ b/comp-lexical/report.bib
@@ -1,3 +1,23 @@
+@inproceedings{dyer2013simple,
+	title={A simple, fast, and effective reparameterization of ibm model 2},
+	author={Dyer, Chris and Chahuneau, Victor and Smith, Noah A},
+	year={2013},
+	organization={Association for Computational Linguistics}
+}
+@inproceedings{pantel2002discovering,
+	title={Discovering word senses from text},
+	author={Pantel, Patrick and Lin, Dekang},
+	booktitle={Proceedings of the eighth ACM SIGKDD international conference on Knowledge discovery and data mining},
+	pages={613--619},
+	year={2002},
+	organization={ACM}
+}
+@article{dinu2013general,
+	title={General estimation and evaluation of compositional distributional semantic models},
+	author={Dinu, Georgiana and others},
+	year={2013},
+	publisher={Citeseer}
+}
 @article{harris1954distributional,
   title={Distributional structure},
   author={Harris, Zellig S},
@@ -20,4 +40,12 @@
 	booktitle={Traitement Automatique des Langues Naturelles-TALN 2010},
 	pages={12},
 	year={2010}
+}
+@inproceedings{toutanova2003feature,
+	title={Feature-rich part-of-speech tagging with a cyclic dependency network},
+	author={Toutanova, Kristina and Klein, Dan and Manning, Christopher D and Singer, Yoram},
+	booktitle={Proceedings of the 2003 Conference of the North American Chapter of the Association for Computational Linguistics on Human Language Technology-Volume 1},
+	pages={173--180},
+	year={2003},
+	organization={Association for Computational Linguistics}
 }
