[social-media] doc2vec suggested params

--- a/social-media/twitter-influencers/visualise_doc2vec.ipynb
+++ b/social-media/twitter-influencers/visualise_doc2vec.ipynb
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -601,12 +601,11 @@
     "plot_kmeans_grp.scatter(x=tsne_kmeans_grp[:,0], y=tsne_kmeans_grp[:,1], \n",
     "                        color=colormap[doc2vec_grp_kmeans.labels_],\n",
     "                        source=bp.ColumnDataSource({\n",
-    "                            \"tweet\": [' '.join(t) for t in grp_tweets.text],\n",
     "                            \"cluster\": doc2vec_grp_kmeans.labels_\n",
     "                        }))\n",
     "\n",
     "grp_hover = plot_kmeans_grp.select(dict(type=HoverTool))\n",
-    "grp_hover.tooltips={\"tweet\": \"@tweet - cluster: @cluster\"}\n",
+    "grp_hover.tooltips={\"cluster\": \"@cluster\"}\n",
     "show(plot_kmeans_grp)"
    ]
   }
